# cproj

./: .cproj_review.json  .flake8  .gitignore  .pre-commit-config.yaml  COMPETITORS.md  CONTRIBUTING.md  LICENSE  Makefile  PROMPT.md  README.md  claude_review_agents.py  cproj.py  cproj_config.py  cproj_integrations.py  cproj_security.py  fix_line_lengths.py  fix_manual.py  install.sh  pyproject.toml  pyproject_ruff.toml  ruff.toml  setup.py  test_claude_review_agents.py  test_cproj.py  uninstall.sh
.claude/: linear-mcp-wrapper.sh  mcp_config.json  settings.local.json  workspace.json
.claude/agents/: code-reviewer.md  product-manager.md  senior-software-engineer.md  ux-designer.md
.claude/commands/: add-ticket.md  review-code  review-code.md
.claude/github-security-fixer/: examples.md
.claude/skills/github-security-fixer/: reference.md
.claude/skills/query-supabase/: reference.md
.cproj/: .agent.json  .linear-1password-ref  project.yaml  setup-claude.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: sync-env-remote.sh
tests/: test_basic_functionality.py  test_cleanup_functionality.py  test_cli_commands.py  test_config_prompting.py  test_environment_setup.py  test_exception_handling.py  test_git_operations.py  test_integration_cli.py  test_integration_environment.py  test_integration_git.py  test_linear_setup.py  test_onepassword_sanitization.py  test_project_config.py  test_review_code_security.py  test_security_fixes.py  test_security_fixes_fixed.py  test_worktree_creation.py
